k8s/kafka.yml
apiVersion: v1
kind: Service
metadata:
  name: kafka
  labels:
    app: kafka
spec:
  ports:
    - port: 9092
      name: plaintext
  selector:
    app: kafka
---
apiVersion: v1
kind: Service
metadata:
  name: zookeeper-service
  labels:
    app: zookeeper-service
spec:
  type: NodePort
  ports:
    - port: 2181
      name: zookeeper-port
  selector:
    app: zookeeper
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zookeeper
  labels:
    app: zookeeper
spec:
  selector:
    matchLabels:
      app: zookeeper
  replicas: 1
  template:
    metadata:
      labels:
        app: zookeeper
    spec:
      containers:
        - name: zookeeper
          image: confluentinc/cp-zookeeper:latest
          ports:
            - containerPort: 2181
          imagePullPolicy: IfNotPresent
      volumes:
        - name: event-zookeeper-data
          hostPath:
            path: /var/lib/zookeeper/data
            type: DirectoryOrCreate
        - name: event-zookeeper-log
          hostPath:
            path: /var/lib/zookeeper/log
            type: DirectoryOrCreate
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: kafka
spec:
  selector:
    matchLabels:
      app: kafka
  serviceName: "kafka"
  replicas: 1
  podManagementPolicy: OrderedReady
  template:
    metadata:
      labels:
        app: kafka
    spec:
      containers:
        - name: kafka
          image: confluentinc/cp-kafka:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9092
              name: plaintext
        volumes:
          - name: event-kafka-data
            hostPath:
              path: /var/lib/kafka/data
              type: DirectoryOrCreate
          - name: event-kafka-log
            hostPath:
              path: /var/lib/kafka/log
              type: DirectoryOrCreate
