k8s/services.yml
apiVersion: v1
kind: Service
metadata:
  name: citta
  labels:
    svc: citta
spec:
  ports:
    - port: 8080
      #targetPort: 9376
      protocol: TCP
      name: http
  selector:
    app: seecity-citta
---
apiVersion: v1
kind: Service
metadata:
  name: feedback
  labels:
    svc: feedback
spec:
  ports:
    - port: 8081
      protocol: TCP
      name: http
  selector:
    app: seecity-feedback
---
apiVersion: v1
kind: Service
metadata:
  name: event
  labels:
    svc: event
spec:
  ports:
    - port: 8082
      #targetPort: 9376
      protocol: TCP
      name: http
  selector:
    app: seecity-event
